début fenêtre dialog

--- a/project/www/admin/src/template/dialog/info.html
+++ b/project/www/admin/src/template/dialog/info.html
@@ -1,5 +1,4 @@
-<div class="two-column admin-title"><h1>Armement FPS</h1></div>
-      <input type="hidden" name="id" value="[#CITIZEN_ADD_INFO_ID#]" />
+<div class="two-column admin-title"><h1>Informations</h1></div>
       <div class="two-column add-list-img">
         <div id="add-all-img-add">
             <input
@@ -28,7 +27,6 @@
         class="input-admin"
         [#CITIZEN_ADD_INFO_ISPRO#]
       />
-      <label for="categorie-select">catégorie</label>
       <label for="contenu">contenu</label
       ><textarea
         name="contenu"
