--- a/project/www/admin/src/template/menu_admin.html
+++ b/project/www/admin/src/template/menu_admin.html
@@ -1,43 +1,53 @@
+
 <div id="admin_contenu_menu">
+    <input type="checkbox" name="check-menu-admin" id="check-menu-admin">
+    <label for="check-menu-admin" id="bt-menu-admin">
+        <img src="./src/images/menu_admin.png" alt="afficher le menu admin">
+        <p>MENU</p>
+    </label>
+    
     <div id="admin_menu">
-        <ul>
-            <li><a class="radio" href="./?ind=espace_user">Mon compte</a></li>
-            <hr>
-            <li><a class="radio" href="./?ind=articles">Les articles</a></li>
-            <li><a class="radio" href="./?ind=cat_articles">catégorie</a></li>
-            <li><a class="radio" href="./?ind=cat_type_articles">type</a></li>
-            <hr>
-            <li><a class="radio" href="./?ind=screens">Les screens</a></li>
-            <hr>
-            <li><a class="radio" href="./?ind=arm_fps">L'armement FPS</a></li>
-            <li><a class="radio" href="./?ind=arm_vaiss">L'armement vaisseau</a></li>
-            <li><a class="radio" href="./?ind=cat_arm">catégorie FPS</a></li>
-            <li><a class="radio" href="./?ind=cat_couleur">couleur</a></li>
-            <li><a class="radio" href="./?ind=cat_taille">taille d'armement</a></li>
-            <hr>
-            <li><a class="radio" href="./?ind=lieux">Lieux</a></li>
-            <li><a class="radio" href="./?ind=cat_lieux">catégories</a></li>
-            <li><a class="radio" href="./?ind=cat_risque">risque</a></li>
-            <hr>
-            <li><a class="radio" href="./?ind=especes">Espèces</a></li>
-            <li><a class="radio" href="./?ind=cat_especes">catégories</a></li>
-            <hr>
-            <li><a class="radio" href="./?ind=construct">Constructeurs</a></li>
-            <hr>
-            <li><a class="radio" href="./?ind=transports">Transports</a></li>
-            <li><a class="radio" href="./?ind=cat_transp">catégories</a></li>
-            <li><a class="radio" href="./?ind=cat_disp">disponibilités</a></li>
-            <li><a class="radio" href="./?ind=cat_faibl">faiblesses</a></li>
-            <li><a class="radio" href="./?ind=cat_forces">forces</a></li>
-            <hr>
-            <li><a class="radio" href="./?ind=mat_prem">matière première</a></li>
-            <li><a class="radio" href="./?ind=cat_mat_prem">catégorie</a></li>
-            <hr>
-            <li><a class="radio" href="./?ind=proprietaires">Propriétaires</a></li>
-            <hr>
-            <li><a class="radio" href="./?ind=services">Services</a></li>
-            [#CITIZEN_INDEX_ADD_MENU_ADMIN#]
-        </ul>
+        <div id="admin_menu_contenu">
+            <label for="check-menu-admin" id="close-menu-admin"><img src="./src/images/x-circle.svg" alt="fermer le menu admin"></label>
+            <ul>
+                <li><a class="radio" href="./?ind=espace_user">Mon compte</a></li>
+                <hr>
+                <li><a class="radio" href="./?ind=articles">Les articles</a></li>
+                <li><a class="radio" href="./?ind=cat_articles">catégorie</a></li>
+                <li><a class="radio" href="./?ind=cat_type_articles">type</a></li>
+                <hr>
+                <li><a class="radio" href="./?ind=screens">Les screens</a></li>
+                <hr>
+                <li><a class="radio" href="./?ind=arm_fps">L'armement FPS</a></li>
+                <li><a class="radio" href="./?ind=arm_vaiss">L'armement vaisseau</a></li>
+                <li><a class="radio" href="./?ind=cat_arm">catégorie FPS</a></li>
+                <li><a class="radio" href="./?ind=cat_couleur">couleur</a></li>
+                <li><a class="radio" href="./?ind=cat_taille">taille d'armement</a></li>
+                <hr>
+                <li><a class="radio" href="./?ind=lieux">Lieux</a></li>
+                <li><a class="radio" href="./?ind=cat_lieux">catégories</a></li>
+                <li><a class="radio" href="./?ind=cat_risque">risque</a></li>
+                <hr>
+                <li><a class="radio" href="./?ind=especes">Espèces</a></li>
+                <li><a class="radio" href="./?ind=cat_especes">catégories</a></li>
+                <hr>
+                <li><a class="radio" href="./?ind=construct">Constructeurs</a></li>
+                <hr>
+                <li><a class="radio" href="./?ind=transports">Transports</a></li>
+                <li><a class="radio" href="./?ind=cat_transp">catégories</a></li>
+                <li><a class="radio" href="./?ind=cat_disp">disponibilités</a></li>
+                <li><a class="radio" href="./?ind=cat_faibl">faiblesses</a></li>
+                <li><a class="radio" href="./?ind=cat_forces">forces</a></li>
+                <hr>
+                <li><a class="radio" href="./?ind=mat_prem">matière première</a></li>
+                <li><a class="radio" href="./?ind=cat_mat_prem">catégorie</a></li>
+                <hr>
+                <li><a class="radio" href="./?ind=proprietaires">Propriétaires</a></li>
+                <hr>
+                <li><a class="radio" href="./?ind=services">Services</a></li>
+                [#CITIZEN_INDEX_ADD_MENU_ADMIN#]
+            </ul>
+        </div>
     </div>
     <div id="admin_contenu">
         
