--- a/project/www/admin/src/css/style_admin.css
+++ b/project/www/admin/src/css/style_admin.css
@@ -35,8 +35,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  margin-top: 100px;
-  margin-left: 10px;
+  margin-top: 74px;
+  margin-left: 2px;
   z-index: 5;
 }
 
@@ -56,6 +56,7 @@
 }
 
 #bt-menu-admin p {
+  /*border-image: url('./../images/menu_admin.png') 30 / 19px round;*/
   position: absolute;
   color: #010054;
   letter-spacing: 3px;
