affichage php + modif css

--- a/project/www/src/css/equipement.css
+++ b/project/www/src/css/equipement.css
@@ -121,7 +121,23 @@
   margin: 40px;
   width: 300px;
 }
-
+@media screen and (max-width: 766px) {
+  .equipement_indiv{
+    margin: 30px 20px;
+  }  
+}
+@media screen and (max-width: 679px) {
+  .container_equipement img {
+    width: 400px;
+    height: auto;
+}
+}
+@media screen and (max-width: 400px) {
+  .container_equipement img {
+    width: 320px;
+    height: auto;
+}
+}
 .arme_indiv {
   display: flex;
   flex-direction: column;
@@ -176,7 +192,6 @@
 .container_contructeur h2,
 .container_contructeur li {
   color: white;
-  margin: 10px;
 }
 
 .container_contructeur h2 {
@@ -188,12 +203,9 @@
 }
 
 .info_construct {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin: 0 30px;
+  display: block;
+  margin: 0 auto;
+  width: 80%;
   box-shadow: rgba(6, 201, 255, 0.25) 0px 50px 100px -20px, rgba(28, 159, 220, 0.3) 0px 30px 60px -30px, rgba(32, 121, 210, 0.35) 0px -2px 6px 0px inset;
 }
 
@@ -202,28 +214,18 @@
 }
 
 .info_construct p {
-  width: 95%;
-  margin: 5px;
-  line-height: 2em;
+  padding: 15px 30px 20px 30px;
+  line-height: 1.5em;
 }
 
 @media (max-width: 950px) {
-  .info_construct img {
-    width: 100%;
-    padding-right: 0px;
+  .info_construct{
+    width: 95%;
   }
-
-  .info_construct p {
-    width: 100%;
-
-  }
-
-  .info_construct {
-    margin: 0 0px;
-
+  .info_construct p{
+    padding: 15px 10px 10px 10px;
   }
 }
-
 .recherche {
   padding: 150px;
   color: white;
@@ -361,3 +363,135 @@ p img {
   float: left;
   margin: 0 1em 1em 0;
 }
+
+
+/*bouton equipement constructeur*/
+
+.container_categorie_construct {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  min-width: 320px;
+  margin-top: 40px;
+  }
+  
+  .menu_categorie_construct{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  margin: 20px auto;
+  text-align: center;
+  width: 100%;
+  height: 40px;
+  transform: translateY(-50%);
+  z-index: 1;
+  list-style-type: none;
+  }
+  .menu_categorie_construct a {
+    color: white;
+  }
+  
+  .categorie_item_construct{
+  height: 100%;
+  background-color: var(--light-color);
+  color: #ffffff;
+  font-family: 'Oswald', sans-serif;
+  border-radius: 7px;
+  letter-spacing: 1px;
+  transition: all 0.3s ease;
+  text-transform: uppercase;
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  transform: skew(-21deg);
+  box-shadow: 0 2px 5px rgba(0,0,0,0.26);
+  margin: 5px;
+  padding: 0 40px;
+  cursor: pointer;
+  }
+  
+  
+  .categorie_item_construct:hover {
+  background: #102549;
+  color: #FFF;
+  }
+  
+  
+  .item_inner_construct {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  z-index: 2;
+  transform: skew(21deg);  
+  }
+  
+  .item_title_construct {
+  font-size: 16px;
+  text-overflow: ellipsis;  
+  overflow: hidden;
+  white-space: nowrap;  
+  }
+  
+  
+  @media all and (max-width: 1000px) {
+  .menu_categorie_construct {
+  height: 35px;
+  }
+  
+  .item_title_construct{
+  font-size: 11px;
+  }
+  .categorie_item_construct {
+  padding: 0 30px;
+  }
+  }
+  
+  @media all and (max-width: 710px) {
+  .menu_actegorie_construct {
+  height: 30px;
+  }
+  .categorie_item_construct {
+  padding: 0 20px;
+  }
+  
+  }
+
+  /* constructeur css */
+  .equipement_transport_construct{
+    margin: 30px 0;
+  }
+  .container_construct{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    text-align: center;
+    color: white;
+    width: 100%;
+    
+  }
+
+
+  .construct_indiv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 40px;
+    width: 300px;
+    background-color: var(--light-color);
+  }
+  .construct_indiv img{
+    width: 300px;
+  }
+  #logo_constructeur{
+    width: 120px;
+    height: 100px;
+  }
