--- a/project/www/src/css/articles.css
+++ b/project/www/src/css/articles.css
@@ -150,6 +150,7 @@
 }
 
 .info_generale {
+    background-color: var(--light-color);
     box-shadow: rgba(6, 201, 255, 0.25) 0px 50px 100px -20px, rgba(28, 159, 220, 0.3) 0px 30px 60px -30px, rgba(32, 121, 210, 0.35) 0px -2px 6px 0px inset;
     border: #00fffb01 1px solid;
     margin: 20px 15%;
