--- a/project/www/src/css/index.css
+++ b/project/www/src/css/index.css
@@ -1101,7 +1101,7 @@ a:hover {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-   
+    
 }
 
 .card--1 .card__img,
@@ -1187,7 +1187,7 @@ a:hover {
     position: relative;
     border-radius: 12px;
     overflow: hidden;
-    box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 21px -12px rgba(1, 238, 255, 0.66);
     margin: 10px;
 }
 @media screen and (max-width: 460px) {
