--- a/project/www/src/css/patch_note.css
+++ b/project/www/src/css/patch_note.css
@@ -10,9 +10,9 @@
     width: 350px;
     margin: 30px;
     background: var(--light-color);
-    box-shadow: 0 0 10px 1px rgba(0, 0, 0, .1);
     transition: transform 0.3s ease-out;
     border-radius: 1em 1em 0.5em 0.5em;
+    box-shadow: 0 4px 21px -12px rgba(1, 238, 255, 0.66);
 }
 
 @media screen and (max-width: 450px) {
