dialog aff contenu

--- a/project/www/admin/src/template/dialog/info.html
+++ b/project/www/admin/src/template/dialog/info.html
@@ -18,19 +18,19 @@
             </figure>
         </div>
       </div>
-      <label for="nom">nom</label
+      <label for="dialog-nom">nom</label
       ><input
         type="text"
         name="nom"
-        id="nom-add"
+        id="dialog-nom"
         value="[#CITIZEN_ADD_INFO_NOM#]"
         class="input-admin"
         [#CITIZEN_ADD_INFO_ISPRO#]
       />
-      <label for="contenu">contenu</label
+      <label for="dialog-contenu">contenu</label
       ><textarea
         name="contenu"
-        id="contenu-add"
+        id="dialog-contenu"
         cols="30"
         rows="10"
         class="input-admin text-bbcode"
