--- a/project/www/admin/src/css/style_dialog.css
+++ b/project/www/admin/src/css/style_dialog.css
@@ -7,6 +7,14 @@
     padding: 15px;
     color: white;
     margin: 16px;
+    /*max-width: 700px;
+    max-height: 100vh;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -ms-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);*/
 }
 #dialog .admin-contenu {
     padding: unset;
