classement des fichiers js

--- a/project/www/admin/src/template/objet/add_mod_mat_prem.html
+++ b/project/www/admin/src/template/objet/add_mod_mat_prem.html
@@ -54,7 +54,7 @@
                         <img src="./src/images/trash3-fill.svg" alt="" />
                     </th>
                     </tr>
-                    <tbody class="tab-body-td" id="tab-body-all">
+                    <tbody class="tab-body-td tab-body-all-dial">
                     [#CITIZEN_MAT_PRE_TAB_INFO#]
                     </tbody>
                 </table>
@@ -71,7 +71,7 @@
                         <img src="./src/images/trash3-fill.svg" alt="" />
                     </th>
                     </tr>
-                    <tbody class="tab-body-td" id="tab-body-all">
+                    <tbody class="tab-body-td tab-body-all-dial">
                     [#CITIZEN_MAT_PRE_TAB_LIEU#]
                     </tbody>
                 </table>
