--- a/project/www/admin/src/template/objet/add_mod_services.html
+++ b/project/www/admin/src/template/objet/add_mod_services.html
@@ -45,7 +45,7 @@
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-all">
+                        <tbody class="tab-body-td tab-body-all-dial">
                             [#CITIZEN_SERV_TAB_INFO#]
                         </tbody>
                     </table>
@@ -58,7 +58,7 @@
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-all">
+                        <tbody class="tab-body-td tab-body-all-dial">
                             [#CITIZEN_SERV_TAB_LIEU#]
                         </tbody>
                     </table>
