--- a/project/www/admin/src/template/objet/add_mod_transp.html
+++ b/project/www/admin/src/template/objet/add_mod_transp.html
@@ -74,7 +74,7 @@
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-info">
+                        <tbody class="tab-body-td tab-body-all-dial">
                             [#CITIZEN_TRANSP_TAB_INFO#]
                         </tbody>
                     </table>
@@ -87,7 +87,7 @@
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-force">
+                        <tbody class="tab-body-td tab-body-all-dial">
                             [#CITIZEN_TRANSP_TAB_FORCE#]
                         </tbody>
                     </table>
@@ -100,7 +100,7 @@
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-faibl">
+                        <tbody class="tab-body-td tab-body-all-dial">
                             [#CITIZEN_TRANSP_TAB_FAIBL#]
                         </tbody>
                     </table>
@@ -113,7 +113,7 @@
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-equip">
+                        <tbody class="tab-body-td tab-body-all-dial">
                             [#CITIZEN_TRANSP_TAB_EQUIPEM#]
                         </tbody>
                     </table>
@@ -126,7 +126,7 @@
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-arm">
+                        <tbody class="tab-body-td tab-body-all-dial">
                             [#CITIZEN_TRANSP_TAB_ARM#]
                         </tbody>
                     </table>
@@ -139,7 +139,7 @@
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-lieux">
+                        <tbody class="tab-body-td tab-body-all-dial">
                             [#CITIZEN_TRANSP_TAB_LIEU#]
                         </tbody>
                     </table>
