--- a/project/www/admin/src/template/gameplay/add_mod_construct.html
+++ b/project/www/admin/src/template/gameplay/add_mod_construct.html
@@ -35,7 +35,7 @@
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-all">
+                        <tbody class="tab-body-td tab-body-all-dial">
                             [#CITIZEN_CONST_TAB_LIEU#]
                         </tbody>
                     </table>
