--- a/project/www/admin/src/template/objet/add_mod_arm_vaiss.html
+++ b/project/www/admin/src/template/objet/add_mod_arm_vaiss.html
@@ -52,7 +52,7 @@
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-all">
+                        <tbody class="tab-body-td tab-body-all-dial">
                             [#CITIZEN_ARM_VAISS_TAB_INFO#]
                         </tbody>
                     </table>
@@ -65,7 +65,7 @@
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-all">
+                        <tbody class="tab-body-td tab-body-all-dial">
                             [#CITIZEN_ARM_VAISS_TAB_LIEU#]
                         </tbody>
                     </table>
