--- a/project/www/admin/src/template/objet/add_mod_especes.html
+++ b/project/www/admin/src/template/objet/add_mod_especes.html
@@ -60,7 +60,7 @@
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-all">
+                        <tbody class="tab-body-td tab-body-all-dial">
                             [#CITIZEN_ESPECES_TAB_INFO#]
                         </tbody>
                     </table>
@@ -73,7 +73,7 @@
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-all">
+                        <tbody class="tab-body-td tab-body-all-dial">
                             [#CITIZEN_ESPECES_TAB_DIPLO#]
                         </tbody>
                     </table>
@@ -86,7 +86,7 @@
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-all">
+                        <tbody class="tab-body-td tab-body-all-dial">
                             [#CITIZEN_ESPECES_TAB_CONTROLLER#]
                         </tbody>
                     </table>
