--- a/project/www/admin/src/template/objet/add_mod_proprietaires.html
+++ b/project/www/admin/src/template/objet/add_mod_proprietaires.html
@@ -48,7 +48,7 @@
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-all">
+                        <tbody class="tab-body-td tab-body-all-dial">
                             [#CITIZEN_PROPR_TAB_INFO#]
                         </tbody>
                     </table>
@@ -61,7 +61,7 @@
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-all">
+                        <tbody class="tab-body-td tab-body-all-dial">
                             [#CITIZEN_PROPR_TAB_LIEU#]
                         </tbody>
                     </table>
