--- a/project/www/admin/src/template/gameplay/add_mod_article.html
+++ b/project/www/admin/src/template/gameplay/add_mod_article.html
@@ -41,8 +41,10 @@
                     </ul>
                 </div>
                 <div class="div-onglet" id="div-onglet-gplayType">
-                    <button class="sauvegarde bt-dialog-add" id="add-lieu">Ajouter un gameplay type</button>
-                    <table>
+                    <button class="sauvegarde bt-dialog-add" id="add-gplayType">Ajouter un gameplay type</button>
+                    <input type="checkbox" name="tb-display-check-gplayType" class="tb-display-check">
+                    <p class="text-tbody-empty">La liste est vide</p>
+                    <table class="tbody-no-empty">
                         <tr>
                             <th>Nom</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
