--- a/project/www/admin/src/template/gameplay/add_mod_construct.html
+++ b/project/www/admin/src/template/gameplay/add_mod_construct.html
@@ -29,6 +29,9 @@
                 </div>
                 <div class="div-onglet" id="div-onglet-lieu">
                     <button class="sauvegarde bt-dialog-add" id="add-lieu">Ajouter un lieu</button>
+                    <input type="checkbox" name="tb-display-check-lieu" class="tb-display-check">
+                    <p class="text-tbody-empty">La liste est vide</p>
+                    <table class="tbody-no-empty">
                     <table>
                         <tr>
                             <th>Nom</th>
