--- a/project/www/admin/src/template/gameplay/articles_all.html
+++ b/project/www/admin/src/template/gameplay/articles_all.html
@@ -6,7 +6,9 @@
             <input type="hidden" name="nbpg" id="nbpg" value="[#CITIZEN_TAB_NBPG#]">
             <input type="hidden" name="nmpg" id="nmpg" value="[#CITIZEN_TAB_NMPG#]">
             <button id="add-tab" class="two-column sauvegarde">Ajouter</button>
-            <table id="tab-all">
+            <input type="checkbox" name="tb-display-check-lieu" class="tb-display-check">
+            <p class="text-tbody-empty">La liste est vide</p>
+            <table class="tbody-no-empty">
                 <tr>
                     <th>Nom</th>
                     <th class="th-admin-visible">Visible</th>
