--- a/project/www/admin/src/template/objet/add_mod_especes.html
+++ b/project/www/admin/src/template/objet/add_mod_especes.html
@@ -54,7 +54,9 @@
                 </div>
                 <div class="div-onglet" id="div-onglet-info">
                     <button class="sauvegarde bt-dialog-add" id="add-info">Ajouter une information</button>
-                    <table id="tab-all">
+                    <input type="checkbox" name="tb-display-check-info" class="tb-display-check">
+                    <p class="text-tbody-empty">La liste est vide</p>
+                    <table class="tbody-no-empty">
                         <tr>
                             <th>Nom</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
@@ -67,7 +69,9 @@
                 </div>
                 <div class="div-onglet" id="div-onglet-diplom">
                     <button class="sauvegarde bt-dialog-add" id="add-diplom">Ajouter une diplomatie</button>
-                    <table id="tab-all">
+                    <input type="checkbox" name="tb-display-check-diplom" class="tb-display-check">
+                    <p class="text-tbody-empty">La liste est vide</p>
+                    <table class="tbody-no-empty">
                         <tr>
                             <th>Nom</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
@@ -80,7 +84,9 @@
                 </div>
                 <div class="div-onglet" id="div-onglet-contro">
                     <button class="sauvegarde bt-dialog-add" id="add-contro">Ajouter un contrôle</button>
-                    <table id="tab-all">
+                    <input type="checkbox" name="tb-display-check-contro" class="tb-display-check">
+                    <p class="text-tbody-empty">La liste est vide</p>
+                    <table class="tbody-no-empty">
                         <tr>
                             <th>Nom</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
