--- a/project/www/admin/src/template/objet/add_mod_transp.html
+++ b/project/www/admin/src/template/objet/add_mod_transp.html
@@ -68,7 +68,9 @@
                 </div>
                 <div class="div-onglet" id="div-onglet-info">
                     <button class="sauvegarde bt-dialog-add" id="add-info">Ajouter une information</button>
-                    <table id="tab-info">
+                    <input type="checkbox" name="tb-display-check-info" class="tb-display-check">
+                    <p class="text-tbody-empty">La liste est vide</p>
+                    <table class="tbody-no-empty">
                         <tr>
                             <th>Informations</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
@@ -81,7 +83,9 @@
                 </div>
                 <div class="div-onglet" id="div-onglet-force">
                     <button class="sauvegarde bt-dialog-add" id="add-force">Ajouter une force</button>
-                    <table id="tab-force">
+                    <input type="checkbox" name="tb-display-check-force" class="tb-display-check">
+                    <p class="text-tbody-empty">La liste est vide</p>
+                    <table class="tbody-no-empty">
                         <tr>
                             <th>Nom</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
@@ -94,7 +98,9 @@
                 </div>
                 <div class="div-onglet" id="div-onglet-faibl">
                     <button class="sauvegarde bt-dialog-add" id="add-faibl">Ajouter une faiblesse</button>
-                    <table id="tab-faibl">
+                    <input type="checkbox" name="tb-display-check-faibl" class="tb-display-check">
+                    <p class="text-tbody-empty">La liste est vide</p>
+                    <table class="tbody-no-empty">
                         <tr>
                             <th>Nom</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
@@ -107,7 +113,9 @@
                 </div>
                 <div class="div-onglet" id="div-onglet-equip">
                     <button class="sauvegarde bt-dialog-add" id="add-equip">Ajouter un équipement</button>
-                    <table id="tab-equip">
+                    <input type="checkbox" name="tb-display-check-equip" class="tb-display-check">
+                    <p class="text-tbody-empty">La liste est vide</p>
+                    <table class="tbody-no-empty">
                         <tr>
                             <th>Nom</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
@@ -120,7 +128,9 @@
                 </div>
                 <div class="div-onglet" id="div-onglet-arm">
                     <button class="sauvegarde bt-dialog-add" id="add-arm">Ajouter un armement</button>
-                    <table id="tab-arm">
+                    <input type="checkbox" name="tb-display-check-arm" class="tb-display-check">
+                    <p class="text-tbody-empty">La liste est vide</p>
+                    <table class="tbody-no-empty">
                         <tr>
                             <th>Nom</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
@@ -133,7 +143,9 @@
                 </div>
                 <div class="div-onglet" id="div-onglet-lieu">
                     <button class="sauvegarde bt-dialog-add" id="add-lieu">Ajouter un lieu</button>
-                    <table id="tab-lieux">
+                    <input type="checkbox" name="tb-display-check-lieu" class="tb-display-check">
+                    <p class="text-tbody-empty">La liste est vide</p>
+                    <table class="tbody-no-empty">
                         <tr>
                             <th>Nom</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
