--- a/project/www/admin/src/template/dialog/info.html
+++ b/project/www/admin/src/template/dialog/info.html
@@ -3,16 +3,16 @@
         <div id="add-all-img-add">
             <input
             type="File"
-            name="fileToUploadAll[]"
+            name="fileToUploadAll-add[]"
             id="fileToUploadAll-add"
             accept="image/png, image/jpeg"
             multiple
             />
             <figure id="all_img-add">
-                <label for="fileToUploadAll">
+                <label for="fileToUploadAll-add">
                     <img src="./src/images/plus-square-dotted.svg" alt="add img" id="img-add" class="img-add" />
                 </label>
-                <figure id="add_img" class="drop_img">
+                <figure id="all-img-add" class="drop_img">
                     [#CITIZEN_ADD_INFO_IMG#]
                 </figure>
             </figure>
