--- a/project/www/admin/src/template/header_footer.html
+++ b/project/www/admin/src/template/header_footer.html
@@ -224,6 +224,8 @@
   <dialog id="dialog">
       <form class="admin-contenu" id="dialog-form" method="post">
         <input type="hidden" name="id" id="id-dialog-form" value="0" />
+        <input type="hidden" name="id-form-main" id="id-form-main" value="0" />
+        <input type="hidden" name="name-show" id="name-show" value="" />
         <button class="close-dialog"><img src="./src/images/x-circle.svg" alt="fermer le dialog"></button>
         <div class="two-column admin-contenu" id="contenu-dialog-form">
         </div>
@@ -231,17 +233,14 @@
       </form>
   </dialog>
   
-    <script
-      src="https://kit.fontawesome.com/3cff230019.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/af562a2a63.js" crossorigin="anonymous"></script>
+    <!--<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://kit.fontawesome.com/3cff230019.js" crossorigin="anonymous"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script
-      src="https://kit.fontawesome.com/af562a2a63.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src="./src/js/tab_body_empty.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/sceditor@3/minified/sceditor.min.js"></script>
+    <script src="./../src/js/script.js"></script>
+    <script src="./../src/js/le_fetch.js"></script>
     <script>
         window.onscroll = function () {
           scrollFunction();
@@ -264,15 +263,13 @@
         }
       </script>
       <!-- partial -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+      <script src="./src/js/tab_body_empty.js"></script>
       <script src="./src/js/page_admin.js"></script>
-      <script src="./../src/js/script.js"></script>
-      <script src="./../src/js/le_fetch.js"></script>
       <script src="./src/js/onglet.js"></script>
       <script src="./src/js/dialog/dialog_main_header.js"></script>
+      <script src="./src/js/dialog/modifInputDialog.js"></script>
       <script src="./src/js/form/form_list_data.js"></script>
       <script src="./src/js/img/img-icon.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/sceditor@3/minified/sceditor.min.js"></script>
       <script>
         
         /*document.querySelectorAll(".text-bbcode").forEach(element => {
