--- a/project/www/admin/src/template/objet/add_mod_mat_prem.html
+++ b/project/www/admin/src/template/objet/add_mod_mat_prem.html
@@ -44,7 +44,9 @@
                 <button class="sauvegarde bt-dialog-add" id="add-info">
                     Ajouter une information
                 </button>
-                <table id="tab-all">
+                <input type="checkbox" name="tb-display-check-info" class="tb-display-check">
+                <p class="text-tbody-empty">La liste est vide</p>
+                <table class="tbody-no-empty">
                     <tr>
                     <th>Informations</th>
                     <th class="th-admin">
@@ -61,7 +63,9 @@
                 </div>
                 <div class="div-onglet" id="div-onglet-lieu">
                 <button class="sauvegarde bt-dialog-add" id="add-lieu">Ajouter un lieu</button>
-                <table id="tab-all">
+                <input type="checkbox" name="tb-display-check-lieu" class="tb-display-check">
+                <p class="text-tbody-empty">La liste est vide</p>
+                <table class="tbody-no-empty">
                     <tr>
                     <th>Nom</th>
                     <th class="th-admin">
