--- a/project/www/admin/src/template/objet/add_mod_services.html
+++ b/project/www/admin/src/template/objet/add_mod_services.html
@@ -39,7 +39,9 @@
                 </div>
                 <div class="div-onglet" id="div-onglet-info">
                     <button class="sauvegarde bt-dialog-add" id="add-info">Ajouter une information</button>
-                    <table id="tab-all">
+                    <input type="checkbox" name="tb-display-check-info" class="tb-display-check">
+                    <p class="text-tbody-empty">La liste est vide</p>
+                    <table class="tbody-no-empty">
                         <tr>
                             <th>Informations</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
@@ -52,7 +54,9 @@
                 </div>
                 <div class="div-onglet" id="div-onglet-lieu">
                     <button class="sauvegarde bt-dialog-add" id="add-lieu">Ajouter un lieu</button>
-                    <table id="tab-all">
+                    <input type="checkbox" name="tb-display-check-lieu" class="tb-display-check">
+                    <p class="text-tbody-empty">La liste est vide</p>
+                    <table class="tbody-no-empty">
                         <tr>
                             <th>Nom</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
