--- a/project/www/admin/src/template/header_footer.html
+++ b/project/www/admin/src/template/header_footer.html
@@ -232,6 +232,13 @@
         <button class="two-column sauvegarde validation-dialog">Valider</button>
       </form>
   </dialog>
+  <dialog id="dialog-msg">
+      <div class="admin-contenu">
+        <button class="close-dialog"><img src="./src/images/x-circle.svg" alt="fermer le dialog"></button>
+        <p id="dialog-text"></p>
+        <button class="two-column sauvegarde validation-dialog">Valider</button>
+      </div>
+  </dialog>
   
     <script src="https://kit.fontawesome.com/af562a2a63.js" crossorigin="anonymous"></script>
     <!--<script src="https://kit.fontawesome.com/a076d05399.js"></script>
