--- a/project/www/src/css/style-header.css
+++ b/project/www/src/css/style-header.css
@@ -324,8 +324,8 @@ footer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: flex-start;
+    justify-content: space-evenly;
+    align-items: center;
     width: 100%;
 }
 .reseau {
@@ -416,9 +416,6 @@ footer {
 .contact li a{
     color: #cfd2d6;
     text-decoration: none;
-}
-.contacter{
-    margin: 30px 10px 10px 10px;
 }
 .contact{
     list-style-type: none;
