--- a/project/www/admin/src/template/header_footer.html
+++ b/project/www/admin/src/template/header_footer.html
@@ -276,7 +276,7 @@
       <script src="./src/js/dialog/dialog_main_header.js"></script>
       <script src="./src/js/dialog/modifInputDialog.js"></script>
       <script src="./src/js/form/form_list_data.js"></script>
-      <script src="./src/js/img/img-icon.js"></script>
+      <script src="./src/js/img/img_icon.js"></script>
       <script>
         
         /*document.querySelectorAll(".text-bbcode").forEach(element => {
