--- a/project/www/admin/src/css/style_dialog.css
+++ b/project/www/admin/src/css/style_dialog.css
@@ -1,5 +1,5 @@
 #dialog {
-    position: relative;
+    position: fixed;
     background-color: rgb(0 0 0 / 95%);
     min-width: 290px;
     width: 100%;
