--- a/project/www/admin/src/template/gameplay/add_mod_article.html
+++ b/project/www/admin/src/template/gameplay/add_mod_article.html
@@ -19,7 +19,7 @@
                         <label for="fileToUploadAll">
                             <img src="./src/images/plus-square-dotted.svg" alt="add img" id="img-add" class="img-add" />
                         </label>
-                        <figure id="add_img" class="drop_img">
+                        <figure id="add-img" class="drop_img">
                             [#CITIZEN_ARTI_IMG#]
                         </figure>
                     </figure>
