--- a/project/www/admin/src/template/objet/add_mod_arm_fps.html
+++ b/project/www/admin/src/template/objet/add_mod_arm_fps.html
@@ -23,7 +23,7 @@
                 <label for="fileToUploadAll">
                     <img src="./src/images/plus-square-dotted.svg" alt="add img" id="img-add" class="img-add" />
                 </label>
-                <figure id="add_img" class="drop_img img-and-main">
+                <figure id="add-img" class="drop_img img-and-main">
                     [#CITIZEN_ARM_FPS_IMG#]
                 </figure>
             </figure>
