--- a/project/www/admin/src/template/objet/add_mod_arm_fps.html
+++ b/project/www/admin/src/template/objet/add_mod_arm_fps.html
@@ -2,6 +2,9 @@
   <div class="card-admin" data-state="#about">
     <div class="admin-title"><h1>Armement FPS</h1></div>
     <form class="admin-contenu" id="form-contenu" method="post" enctype="multipart/form-data">
+      <input type="hidden" name="folder-img" value="armement_fps" />
+      <input type="hidden" name="type-obj" value="[#CITIZEN_TYPE_OBJ#]" />
+      <input type="hidden" name="type-arm" value="[#CITIZEN_TYPE_ARM#]" />
       <input type="hidden" name="id" value="[#CITIZEN_ARM_FPS_ID#]" />
       <div class="two-column">
         <input
